white space on the right side fix

--- a/style/style.scss
+++ b/style/style.scss
@@ -489,7 +489,7 @@ button {
     }
 
     .big-cube2 {
-        right: 5%;
+        right: 7%;
         bottom: -60px;
         width: 120px;
         height: 120px;
